# indexed-traversable

./: .gitignore  cabal.haskell-ci  cabal.project  haskell-ci.sh
.github/workflows/: haskell-ci.yml
indexed-traversable/: Changelog.md  indexed-traversable.cabal
indexed-traversable-benchmarks/: indexed-traversable-benchmarks.cabal
indexed-traversable-benchmarks/bench/: folds.hs  traversals.hs
indexed-traversable-instances/: Changelog.md  indexed-traversable-instances.cabal
indexed-traversable-instances/bench/: folds.hs
indexed-traversable-instances/src/Data/Functor/WithIndex/: Instances.hs
indexed-traversable-instances/tests/: main.hs  safe.hs
indexed-traversable/src/: CoerceCompat.hs  GhcList.hs  WithIndex.hs
indexed-traversable/src/Data/Foldable/: WithIndex.hs
indexed-traversable/src/Data/Foldable1/: WithIndex.hs
indexed-traversable/src/Data/Functor/: WithIndex.hs
indexed-traversable/src/Data/Traversable/: WithIndex.hs
patches/: free.patch  lens.patch  optics.cabal
traversable-with-index/: traversable-with-index.cabal
traversable-with-index-instances/: traversable-with-index-instances.cabal
traversable-with-index-instances/src/Data/Functor/WithIndex/: Instances.hs
traversable-with-index/src/Data/Functor/: WithIndex.hs
with-index/: with-index.cabal
with-index-instances/: cabal.project  with-index-instances.cabal
with-index-instances/src/Data/Functor/WithIndex/: Instances.hs
with-index/src/: WithIndex.hs
with-index/src/Data/Foldable/: WithIndex.hs
